--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.31.8",
     "@tailwindcss/vite": "^4.1.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
